--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 .footer {
     text-align: center;
-    position: absolute;
+    position: relative;
     bottom: 0;
     background-color: #0000ff99;
     width: 100%;
